--- a/config/config.yaml
+++ b/config/config.yaml
@@ -136,23 +136,23 @@ platforms:
   - id: "fastbull"
     name: "快讯通"
 
-  # === 社交/短视频/娱乐类 ===
-  - id: "weibo"
-    name: "微博"
-  - id: "douyin"
-    name: "抖音"
-  - id: "bilibili-hot-search"
-    name: "bilibili 热搜"
-  - id: "tieba"
-    name: "贴吧"
-  - id: "zhihu"
-    name: "知乎"
-  - id: "hupu"
-    name: "虎扑"
-  - id: "douban"
-    name: "豆瓣"
-  - id: "coolapk"
-    name: "酷安"
+  # # === 社交/短视频/娱乐类 ===
+  # - id: "weibo"
+  #   name: "微博"
+  # - id: "douyin"
+  #   name: "抖音"
+  # - id: "bilibili-hot-search"
+  #   name: "bilibili 热搜"
+  # - id: "tieba"
+  #   name: "贴吧"
+  # - id: "zhihu"
+  #   name: "知乎"
+  # - id: "hupu"
+  #   name: "虎扑"
+  # - id: "douban"
+  #   name: "豆瓣"
+  # - id: "coolapk"
+  #   name: "酷安"
 
   # === 科技类平台 ===
   - id: "ithome"
