--- a/config/config.yaml
+++ b/config/config.yaml
@@ -109,14 +109,14 @@ platforms:
     name: "凤凰网"
   - id: "cankaoxiaoxi"
     name: "参考消息"
-  # - id: "sputniknewscn"
-  #   name: "卫星通讯社"
-  # - id: "zaobao"
-  #   name: "联合早报"
+  - id: "sputniknewscn"
+    name: "卫星通讯社"
+  - id: "zaobao"
+    name: "联合早报"
   # - id: "mktnews"
-  #   name: "MKT新闻"
-  # - id: "kaopu"
-  #   name: "靠谱新闻"
+  # name: "MKT新闻"
+  - id: "kaopu"
+    name: "靠谱新闻"
 
   # === 财经投资类 ===
   - id: "wallstreetcn-hot"
