--- a/config/config.yaml
+++ b/config/config.yaml
@@ -113,8 +113,8 @@ platforms:
     name: "卫星通讯社"
   # - id: "zaobao"
   # name: "联合早报"
-  # - id: "mktnews"
-  # name: "MKT新闻"
+  - id: "mktnews"
+    name: "MKT新闻"
   - id: "kaopu"
     name: "靠谱新闻"
 
